--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
+    "lodash": "^4.17.15",
     "next": "^9.4.4",
     "next-apollo": "^4.0.1",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "ts-jest": "^26.1.1",
