--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^3.5.0",
     "apollo-boost": "^0.4.9",
     "awesome-typescript-loader": "^5.2.1",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
@@ -32,14 +33,16 @@
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "next": "^9.4.4",
     "next-apollo": "^4.0.1",
+    "next-pwa": "^3.0.3",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-paginate": "^6.3.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "ts-jest": "^26.1.1",
