--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "background_color": "#2196f3",
   "display": "browser",
   "Scope": "/",
-  "start_url": "/",
+  "start_url": "/home",
   "icons": null,
   "splash_pages": null
 }
