--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "build": "next build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
