--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@storybook/addon-viewport": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
-    "@types/jest": "^26.0.3",
+    "@types/jest": "^26.0.7",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
@@ -23,7 +23,8 @@
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
-    "eslint": "^7.4.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
@@ -31,7 +32,6 @@
     "eslint-plugin-react-hooks": "^4.0.5",
     "graphql": "^15.2.0",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.19",
     "next": "^9.4.4",
