--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@storybook/addon-viewport": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
-    "@types/jest": "^26.0.7",
+    "@testing-library/react": "^10.4.7",
+    "@types/jest": "^26.0.8",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
@@ -46,16 +47,17 @@
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "styled-css-grid": "^1.2.1",
-    "ts-jest": "^26.1.1",
+    "ts-jest": "^26.1.4",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "next start",
     "build": "next build",
-    "test": "jest",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject",
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -73,5 +75,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "babel-jest": "^26.2.2",
+    "jest": "^26.2.2"
   }
 }
