--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
     "@testing-library/jest-dom": "^5.11.2",
-    "@testing-library/react": "^10.4.7",
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.14",
-    "@types/react": "^16.9.41",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@testing-library/react": "^10.4.8",
+    "@types/enzyme": "^3.10.5",
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.38",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.5.0",
     "apollo-boost": "^0.4.9",
     "awesome-typescript-loader": "^5.2.1",
@@ -35,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.0.5",
     "graphql": "^15.2.0",
     "husky": "^4.2.5",
+    "jest-enzyme": "^7.1.2",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.19",
     "next": "^9.4.4",
@@ -49,9 +51,9 @@
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "styled-css-grid": "^1.2.1",
-    "ts-jest": "^26.1.4",
+    "ts-jest": "^26.1.0",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "next start",
