--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@apollo/react-hooks": "^3.1.5",
     "@apollo/react-ssr": "^3.1.5",
     "@apollo/react-testing": "^4.0.0",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@storybook/addon-a11y": "^5.3.19",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-docs": "^5.3.19",
@@ -58,7 +60,7 @@
   "scripts": {
     "start": "next start",
     "build": "next build",
-    "test": "jest --coverage",
+    "test": "jest --coverage -o",
     "test:watch": "jest --watch",
     "eject": "react-scripts eject",
     "dev": "next dev",
@@ -81,11 +83,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
+    "@jest/fake-timers": "^26.3.0",
     "babel-jest": "^26.2.2",
-    "jest": "^26.2.2"
+    "jest": "^26.2.2",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0"
   }
 }
