--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx", "jest.config.js"
+    "**/*.tsx", "jest.config.js", "babel.config.js"
   ],
   "strict": true
 }
